Opened 8 years ago
Closed 8 years ago
#8243 closed bug (fixed)
two Terminal windows opening instead of one
Reported by: | luroh | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ProcessController | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
Haiku hrev43509, gcc2.
Since around the time of the pm branch merge, we now get two Terminal windows instead of one when right-clicking ProcessController in the Deskbar and selecting New Terminal.
Change History (2)
comment:1 by , 8 years ago
Component: | - General → Applications/ProcessController |
---|
comment:2 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev43510. Thanks to diver for quickly figuring out where to look.
Note:
See TracTickets
for help on using tickets.
Assigning to ProcessController until the problem is better understood.