Fix copy&paste error and double launch of Terminal.

Apparently the "Deskbar" part was a copy&paste error. Also there was
an additional launch call making two Terminal windows come up. Should
fix #8243.